fixed page-dragging bug on mobile. added playcounts to sidepanel and mix page

--- a/app/styles/sidepanel.scss
+++ b/app/styles/sidepanel.scss
@@ -544,6 +544,10 @@ p.sc-meta {
 	}
 }
 
+.playcount {
+	color: #666;
+}
+
 .month p:nth-of-type(2) {
 	font-family: $reg, Helvetica, sans-serif;
 }
