--- a/app/styles/sitewide.scss
+++ b/app/styles/sitewide.scss
@@ -144,7 +144,7 @@ noscript a {
 	html,
 	body,
 	#container {
-		overflow-y: scroll;
+		
 	}
 
 	#container {
